# ML23_LosGoons

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  test.py
ml23/ejercicio_0-intro/: Intro_a_jupyter_notebook.ipynb  Intro_a_jupyter_notebook_sol.ipynb  Intro_a_numpy.ipynb  Intro_a_numpy_sol.ipynb
ml23/ejercicio_1_LinearReg/: gradient_descent.ipynb  gradient_descent_sol.ipynb  linear_regression.ipynb  linear_regression_sol.ipynb
ml23/ejercicio_2_LogisticReg/: logistic_regression.ipynb  logistic_regression_sol_clase.ipynb
ml23/ejercicio_3_NaiveBayes/: naive_bayes.py  preprocessing.py  rotten_tomatoes_dataset.py  training.py
ml23/ejercicio_3_NaiveBayes/sol/: naive_bayes_sol.py  preprocessing_sol.py
ml23/ejercicio_4_Unsupervised/: clustering.ipynb  clustering_sol.ipynb  dim_reduction.ipynb  dim_reduction_sol.ipynb
ml23/ejercicio_5-MLP_reg/: mlp_reg.ipynb
ml23/ejercicio_6-cnns/: cnn_classifier.ipynb
ml23/proyecto_1_ML/: proyecto_1_ML.ipynb
ml23/proyecto_2_DL/: network.py  training.py
ml23/proyecto_final_QL/: FrozenLake_Agente.py  frozenlake_QL.ipynb
ml23/proyecto_final_QL/reward figures/: a.txt
