[metadata]
description = "Ejercicios para la materia de aprendizaje de máquina"
author = "Jessica Borja"
author_email = "jessica.borja@cetys.mx"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
install_requires =
    datasets
    numpy
    pandas
    matplotlib
    scikit-learn
    opencv-python
    ipykernel
    ipympl
    notebook
    scipy
packages = find:
include_package_data = true